[tool.poetry]
name = "arcturus"
version = "0.2.0"
description = "Arcturus is an API that can help an AI to access realtime Data from the Stellar Network."
authors = ["Christian Rogobete <c.rogobete@soneso.com>"]
readme = "README.md"
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.10"
Werkzeug= "==2.2.2"
quart = "^0.18.4"
quart-cors = "^0.7.0"
stellar-sdk = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"